tests/agl/rejections/type/exec_unknown_arg.agl
let r = exec("ls", timeout: 10)
r
